--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -13,5 +13,6 @@
       <li>Price: $<%= product.price %></li>
       <li>Category: <%= product.category %></li>
     </ul>
+    <a href="/products">Back to All Products</a>
   </body>
 </html>
