--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -14,5 +14,6 @@
       <li>Category: <%= product.category %></li>
     </ul>
     <a href="/products">Back to All Products</a>
+    <a href="/products/<%=product._id%>/edit">Edit Product</a>
   </body>
 </html>
