--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -15,5 +15,8 @@
     </ul>
     <a href="/products">Back to All Products</a>
     <a href="/products/<%=product._id%>/edit">Edit Product</a>
+    <form action="/products/<%=product._id%>?_method=DELETE" method="POST">
+      <button>Delete</button>
+    </form>
   </body>
 </html>
